localized: Pixen guide, Pattern Editor context menu, Pixen color palette/Fixed Japanese menu terms to match other expressions

--- a/English.lproj/Localizable.strings
+++ b/English.lproj/Localizable.strings
@@ -235,6 +235,9 @@
 /* About */
 "VERSION_STRING" = "Version %@";
 
+/* Color Well */
+"COLOR_WELL_PIXEN_COLORS" = "Pixen Colors";
+
 // new
 
 "ADD_FRAME" = "Add Frame";
